# AdhesionRandomWalk

./: .color_coded  .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  DataBase.h  LICENSE  ParkMiller.cpp  ParkMiller.h  README.md  RandomBase.h  RandomWalk.h  RandomWalk.py  RandomWalkBase.cpp  RandomWalkBase.h  RandomWalkData.h  RandomWalkData.py  RandomWalkEngine.py  RandomWalkStatistics.cpp  RandomWalkStatistics.h  RandomWalkStatistics.py  RandomWalk_test.cpp  Statistics.cpp  Statistics.h  StatisticsBase.h  Statistics_test.cpp  array.h
RandomWalk/: CMakeLists.txt  ParkMiller.h  ParkMiller_test.cpp  Statistics.h  Statistics_test.cpp
RandomWalk/include/: chronos.h  concepts.h  debug.h  file_helpers.h
include/: debug.h  make_unique.h  wrapper.h
new/: .vimrc  .ycm_extra_conf.py  CMakeLists.txt  CellDensityTest.cpp  PeriodicBoundary.cpp  RandomBase.cpp  RandomBase.h  Simulator.cpp  adhesion_1d.py  benchmark.cpp  boundary.i  main.cpp  simulator.i  simulator_wrap.cxx
new/include/: Boundary.h  BoundaryFactory.h  Cell.h  CellDensity.h  Parameters.h  ParkMiller.h  PeriodicBoundary.h  Probability.h  RandomNumberFactory.h  RandomNumberGenerator.h  RandomWalk.h  Simulator.h  Terminate.h  debug.h
new/python/: adhesion_1d.py  models.py  randomWalk_db.py
new/src/: CMakeLists.txt
new/src/Random/: CMakeLists.txt
new/src/RandomWalk/: Parameters.h  Simulator.cpp  Simulator.h  simulator.i
new/src/tests/: CMakeLists.txt  CellDensityTest.cpp  benchmark.cpp
new/utils/: BasicException.h  files.h
python/: .vimrc  DataModel.py  DataObject.py  adhesion_1d.py  adhesion_1d_sql.py  adhesion_test.py  alembic.ini  data.py  db.py  degredation.py  degredation_efficient.py  diffusion.py  diffusion_1d.py  diffusion_test.py  drift_test.py  event_test.py  heat.py  import.py  init.py  log.py  models.py  plot.py  plotting.py  randomWalk_db.py  swig.py  test.py  vector_test.py
python/alembic/: env.py
python/alembic/versions/: 167e05b80b5_add_field_for_ic_weight.py  19089cd961e8_changed_numeric_data_types_to_allow_.py  35c7e94e6883_init.py
src/Boundary/: Boundary.h  BoundaryFactory.h  CMakeLists.txt  PeriodicBoundary.cpp
src/Boundary/tests/: CMakeLists.txt  PeriodicBoundaryTest.h
src/Random/: CMakeLists.txt  ParkMiller.h  RandomBase.h
src/RandomWalk/: CMakeLists.txt  Event.h  EventListener.cpp  EventListener.h  EventRegistry.h  Parameters.cpp  Parameters.h  Propensities.cpp  Propensities.h  PropensityGenerator.h  PyCallback.h  RandomWalk.cpp  RandomWalk.h  SimulationData.h  Simulator.cpp  Simulator.h  Simulator_traits.h  StateVector.h  StateVectorAccessorCache.h  StateVectorAccessorCache_v2.h  simulator.i  vector.h
src/tests/: CMakeLists.txt  CellDensityTest.cpp  PropensitiesAdhesionTest.h  PropensitiesDiffusionTest.h  PropensitiesDriftTest.h  RandomWalkTest.h  StateVectorAccessorCacheTest.h  StateVectorAccessorCacheTest_v2.h  StateVectorTest.h  TerminateTest.cpp  benchmark.cpp  main.cpp
tmp/: Callback.h  Event.h  ObjWithPyCallback.cpp  ObjWithPyCallback.h  ObjWithPyCallback.i  PyCallback.h  PyCallback2.h  Sim.h  cb.py  example.py  main.cpp  test.h  test.i  test.py  test_script.py
utils/: AlignmentAllocator.h  CMakeLists.txt  Log.cpp  Loop.h  Terminate.h  aligned_allocator_detail.cpp  chronos.h  concepts.h  debug.h  debug_type.h  dynamic_assert.cpp  dynamic_assert.h  exceptions.h  flat_index_map.h  helpers.h  log.h  wrapper.h
utils/spdlog/: CMakeLists.txt
utils/vector_simd/: CMakeLists.txt  Vec256.h  invoker.h  simd.hpp  simd_config.h  simd_traits.h  simd_traits_avx.h  simd_traits_see.h  vector2d.h  vector4d.h  vector4f.h  vector4i.h  vector8f.h  vector8i.h  vector_base.h
utils/vector_simd/tests/: CMakeLists.txt  Vector256bTest.h  Vector2dTest.h  Vector4dTest.h  Vector4fTest.h  Vector4iTest.h  Vector8fTest.h  Vector8iTest.h  common_test.h  vector_ops.h
